adding Twitter icon

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <body>
     <header class="container">
       <div class="logo">Logo</div>
-      <div class="twitter">T</div>
+      <div class="twitter">Follow us on Twitter</div>
     </header>
 
     <main class="container content">
