--- a/index.html
+++ b/index.html
@@ -16,11 +16,10 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-title" content="Web Starter Kit">
 
-
     <link rel="stylesheet" href="build/css/main.css">
 
     <!-- Google Fonts -->
-    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Roboto+Condensed:400,300,700'>
+    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Open+Sans:400,700'>
 
   </head>
   <body>
@@ -34,8 +33,10 @@
       <p class="lead">Combine your blog posts into set of tweets and get comments from your audience in real time.</p>
 
       <div class="signup">
-        <label for="email">Your email</label>
-        <input type="email" name="email" aria-required="true" required>
+        <div class="dynamic-label">
+          <label for="email">Your email</label>
+          <input type="email" name="email" aria-required="true" required>
+        </div>
         <button>Get notified</button>
       </div>
     </main>
