--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
 
       <div class="signup">
         <div class="dynamic-label">
-          <label for="email">Your email</label>
-          <input type="email" name="email" aria-required="true" required>
+          <label for="email" id="email-label">Your email</label>
+          <input type="email" name="email" id="email-input" 
+            aria-required="true" required>
         </div>
         <button>Get notified</button>
       </div>
@@ -54,7 +55,7 @@
     </div>
 
     <!-- build:js scripts/main.min.js -->
-    <script src="scripts/main.js"></script>
+    <script src="build/js/main.js"></script>
     <!-- endbuild -->
 
     <script>
