styling demo frame

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="build/css/main.css">
 
     <!-- Google Fonts -->
-    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Open+Sans:400,700'>
+    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Raleway:400,700'>
 
   </head>
   <body>
@@ -48,10 +48,36 @@
         <div></div>
         <div></div>
       </div>
-      <ul class="tweets">
-        <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione fugiat expedita quos suscipit ut, amet dolorum est autem, nihil ex.</li>
-        <li>Curabitur blandit tempus porttitor. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.</li>
-      </ul>
+      <div class="body">
+        <ul class="tweets">
+          <li>
+            <div class="icon">✔</div>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione fugiat expedita quos suscipit ut, amet dolorum est autem, nihil ex.
+            <div class="comments-counter"><span>12</span></div>
+          </li>
+          <li>  
+            <div class="icon">✔</div>
+            Curabitur blandit tempus porttitor. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.
+            <div class="comments-counter"><span>2</span></div>
+          </li>
+          <li>
+            <div class="counter">136</div>
+            Sed posuere consectetur
+            <div class="comments-counter"></div>
+          </li>
+        </ul>
+        <div class="comments">
+          <ul>
+            <li>
+              <div class="avatar">
+                <img src="http://lorempixel.com/20/20" alt="" class="avatar">
+                <span>John Doe</span>
+              </div>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde obcaecati expedita veniam debitis molestiae, et voluptatibus cum minus nesciunt officia optio corrupti aliquid natus totam sunt labore quod aperiam quibusdam.
+            </li>
+          </ul>
+        </div>
+      </div>
     </div>
 
     <!-- build:js scripts/main.min.js -->
