finishing up demo frame

--- a/index.html
+++ b/index.html
@@ -48,22 +48,28 @@
         <div></div>
         <div></div>
       </div>
+      <span class="title">10 reasons why TweetStorming is awesome!</span>
       <div class="body">
         <ul class="tweets">
           <li>
             <div class="icon">✔</div>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione fugiat expedita quos suscipit ut, amet dolorum est autem, nihil ex.
-            <div class="comments-counter"><span>12</span></div>
+            <div class="body" id="tweet-1">It turns your Twitter feed into blogging platform.</div>
+            <div class="comments-counter"><span class="active">4</span></div>
           </li>
           <li>  
             <div class="icon">✔</div>
-            Curabitur blandit tempus porttitor. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.
-            <div class="comments-counter"><span>2</span></div>
+            <div class="body" id="tweet-2">Your write your posts as a set of short thoughts</div>
+            <div class="comments-counter"><span>1</span></div>
           </li>
           <li>
-            <div class="counter">136</div>
-            Sed posuere consectetur
-            <div class="comments-counter"></div>
+            <div class="icon">✔</div>
+            <div class="body" id="tweet-3">And each thought has it's own comment thread</div>
+            <div class="comments-counter"><span>0</span></div>
+          </li>
+           <li>
+            <div class="counter">70</div>
+            <div class="body" id="tweet-3">It's real time so you can observe your readers reactions while writing</div>
+            <div class="comments-counter"><span>0</span></div>
           </li>
         </ul>
         <div class="comments">
@@ -73,7 +79,7 @@
                 <img src="http://lorempixel.com/20/20" alt="" class="avatar">
                 <span>John Doe</span>
               </div>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde obcaecati expedita veniam debitis molestiae, et voluptatibus cum minus nesciunt officia optio corrupti aliquid natus totam sunt labore quod aperiam quibusdam.
+              Nice. So I can live blog to all my Twitter followers.
             </li>
           </ul>
         </div>
