adding mailchimp newsletter

--- a/index.html
+++ b/index.html
@@ -5,16 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>TwittStorm</title>
+    <title>Tweetlog | The new way of blogging</title>
 
     <!-- Add to homescreen for Chrome on Android -->
     <meta name="mobile-web-app-capable" content="yes">
-    <link rel="icon" sizes="196x196" href="images/touch/chrome-touch-icon-196x196.png">
 
     <!-- Add to homescreen for Safari on iOS -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="Web Starter Kit">
+    <meta name="apple-mobile-web-app-title" content="Tweetlog">
 
     <link rel="stylesheet" href="build/css/main.css">
 
@@ -32,14 +31,17 @@
       <h1 id="hello">Tweetstorm your blog.</h1>
       <p class="lead">Combine your blog posts into set of tweets and get comments from your audience in real time.</p>
 
-      <div class="signup">
+      <form method="POST"
+        action="//google.us4.list-manage.com/subscribe/post?u=459e37d7d15cb0300c321b7f9&amp;id=5330815172" 
+        class="signup">
         <div class="dynamic-label">
-          <label for="email" id="email-label">Your email</label>
-          <input type="email" name="email" id="email-input" 
+          <label for="EMAIL" id="email-label">Your email</label>
+          <input type="email" name="EMAIL" id="email-input" 
             aria-required="true" required>
         </div>
+        <div style="position: absolute; left: -5000px;"><input type="text" name="b_459e37d7d15cb0300c321b7f9_5330815172" tabindex="-1" value=""></div>
         <button>Get notified</button>
-      </div>
+      </form>
     </main>
 
     <div id="wireframe-demo" class="big-grey-block">
