setting lang and fixing label reference

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -35,7 +35,7 @@
         action="//google.us4.list-manage.com/subscribe/post?u=459e37d7d15cb0300c321b7f9&amp;id=5330815172" 
         class="signup">
         <div class="dynamic-label">
-          <label for="EMAIL" id="email-label">Your email</label>
+          <label for="email-input" id="email-label">Your email</label>
           <input type="email" name="EMAIL" id="email-input" 
             aria-required="true" required>
         </div>
