--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <main class="container content">
       <h1 id="hello">Tweetstorm your blog.</h1>
-      <p class="lead">Combine your blog posts into set of tweets and get comments from your audience in real time.</p>
+      <p class="lead">Turn your blog posts into a set of tweets and get comments from your audience in real time.</p>
 
       <form method="POST"
         action="//google.us4.list-manage.com/subscribe/post?u=459e37d7d15cb0300c321b7f9&amp;id=5330815172" 
@@ -50,22 +50,22 @@
         <div></div>
         <div></div>
       </div>
-      <span class="title">10 reasons why TweetStorming is awesome!</span>
+      <span class="title">5 reasons why TweetStorming is awesome!</span>
       <div class="body">
         <ul class="tweets">
           <li>
             <div class="icon">✔</div>
-            <div class="body" id="tweet-1">It turns your Twitter feed into blogging platform.</div>
+            <div class="body" id="tweet-1">It turns your Twitter feed into a blogging platform.</div>
             <div class="comments-counter"><span class="active">1</span></div>
           </li>
           <li>  
             <div class="icon">✔</div>
-            <div class="body" id="tweet-2">Your write your posts as a set of short thoughts</div>
+            <div class="body" id="tweet-2">You write your posts as a set of short thoughts</div>
             <div class="comments-counter"><span>1</span></div>
           </li>
           <li>
             <div class="icon">✔</div>
-            <div class="body" id="tweet-3">And each thought has it's own comment thread</div>
+            <div class="body" id="tweet-3">and each thought has it's own comment thread.</div>
             <div class="comments-counter"><span>0</span></div>
           </li>
            <li>
@@ -74,6 +74,7 @@
             <div class="comments-counter"><span>0</span></div>
           </li>
         </ul>
+
         <div class="comments">
           <ul>
             <li>
@@ -81,10 +82,11 @@
                 <img src="http://lorempixel.com/20/20" alt="" class="avatar">
                 <span>John Doe</span>
               </div>
-              Nice. So I can live blog to all my Twitter followers.
+              Nice. Now I can live blog to all my Twitter followers.
             </li>
           </ul>
         </div>
+
       </div>
     </div>
 
